--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run update script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_USERNAME: ${{ secrets.GH_USERNAME }}
         run: python update_readme.py
 
       - name: Commit and Push Changes
